edit inventory: removed scrollbar for additional attributes dialog & center positioning & labels for attributes & removed additional attributes if there are none / storing previous locations and panning to them when adding new items. fixed links to work correct.
git-svn-id: https://svn.origo.ethz.ch/swissmon/swissmon@835 035473d3-0685-4573-a6ed-08f8c3112c85

--- a/application/modules/inventory/css/sgroup.edit.css
+++ b/application/modules/inventory/css/sgroup.edit.css
@@ -22,3 +22,8 @@ td.delete div {
   background-color:#fff;
   border-bottom-width:2px;
 }
+
+td.icon {
+  padding-left:5px;
+  padding-right:5px;	
+}
